tests/baselines/reference/typeOfThisInStaticMembers5(target=es5).errors.txt
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers5.ts(2,31): error TS2334: 'this' cannot be referenced in a static property initializer.


==== tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers5.ts (1 errors) ====
    class C {
        static create = () => new this("yep")
                                  ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
    
        constructor (private foo: string) {
    
        }
    }
    